--- a/goslow/index.html
+++ b/goslow/index.html
@@ -29,7 +29,7 @@
   <body>
     <div id="intro">
       <video id="example_video" class="video-js vjs-default-skin"
-        controls preload="auto" width="1024" height="576"
+        preload="auto" width="1024" height="576"
         poster="goslow.png" autoplay preload loop
         source src="clip.mp4" type='video/mp4' />
       </video>
@@ -41,7 +41,7 @@
     </div>
 
     <div id="ready" class="waiting text-center full-page-wrapper">
-      <button type="button" class="btn btn mode disabled active">What</button>
+      <button type="button" class="btn mode disabled active">What</button>
       <div class="full-page">
         <div class='lead text-danger title'>Look at Camera</div>
         <div class="arrow">
@@ -61,11 +61,16 @@
 
     <div id="done" class="waiting text-center full-page-wrapper">
       <div class="full-page">
-        <video id="replay_video" class="video-js vjs-default-skin"
-          controls preload="auto" width="1024" height="576"
-          poster="goslow.png" autoplay loop />
-        </video>
-        <div class="status">Hello</div>
+        <div id="playback">
+          <button type="button" class="btn btn-danger mode">Skip</button>
+          <video id="replay_video" class="video-js vjs-default-skin playback"
+            preload="none" width="1024" height="576" />
+          </video>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger"></div>
+          </div>
+        </div>
+        <div class="status">&nbsp;</div>
       </div>
     </div>
 
