Cleaning up the code a bit. Getting rid of old data from previous version.

--- a/goslow/index.html
+++ b/goslow/index.html
@@ -62,7 +62,7 @@
     <div id="done" class="waiting text-center full-page-wrapper">
       <div class="full-page">
         <div id="playback">
-          <button type="button" class="btn btn-danger mode">Skip</button>
+          <button type="button" class="btn btn-danger btn-block mode">Skip</button>
           <video id="replay_video" class="video-js vjs-default-skin playback"
             preload="none" width="1024" height="576" />
           </video>
